--- a/sails-bin/templates/digicons/create_digicon.html
+++ b/sails-bin/templates/digicons/create_digicon.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ i18n!(self.i18n.catalog, "Create product") }}{% endblock title %}
+{% block title %}{{ i18n!(self.i18n.catalog, "Create the Digital Content") }}{% endblock title %}
 {% block content %}
   <main class="container">
   <div class="p-5 rounded shadow">
