--- a/sails-bin/templates/admin/coupons/update_coupon.html
+++ b/sails-bin/templates/admin/coupons/update_coupon.html
@@ -6,7 +6,7 @@
     <h1>{{ i18n!(self.i18n.catalog, "Update the coupon") }}</h1>
     <p class="lead">{{ i18n!(self.i18n.catalog, "Fill in relevant information to update the coupon") }}</p>
     <br>
-    <form action="cow_coupon" method="post">
+    <form action="{{ uri!("/admin", crate::services::admin::update_coupon(self.coupon.get_id())) }}" method="post">
     <div class="form-group row">
       <label for="inpuID" class="col-sm-2 col-form-label">{{ i18n!(self.i18n.catalog, "ID") }}</label>
       <div class="col-sm-10">
