--- a/sails-bin/templates/orders/order_info.html
+++ b/sails-bin/templates/orders/order_info.html
@@ -41,7 +41,7 @@
       </div>
       <br>
       <h3>{{ i18n!(self.i18n.catalog, "Congratulations, your order is completed!") }}</h2>
-      {{ i18n!(self.i18n.catalog, "For Digital Contents, please access them at <a href=\"/user\">your portal page</a>. Any questions or need help? <a href=\"mailto:admin@flibrary.info\">Contact us</a>")|safe }}
+      {{ i18n!(self.i18n.catalog, "For Digital Contents, please access them at <a href=\"/library\">your library</a>. Any questions or need help? <a href=\"mailto:admin@flibrary.info\">Contact us</a>")|safe }}
       {% endmatch %}
     </div>
 <br>
